--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-icons": "^5.3.0",
+    "react-medium-image-zoom": "^5.2.14",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
