--- a/studio/package.json
+++ b/studio/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/code-input": "^5.1.3",
     "@sanity/vision": "^4.1.1",
     "dotenv": "^17.2.1",
     "react": "^19.1",
